primera version excuse

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,12 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+.excuse {
+  width: 80%;
+  background: rgba(0, 162, 255, 0.523);
+  margin: auto;
+  display: block;
+  justify-content: center;
+  border-radius: 20%;
+}
+.excuse p {
+  font-family: "Chango", cursive;
+}
